funcionl metrics, ajout de endpoint test+ modif diagrame deployment+ load test